src/main/java/com/example/marcel/DevDojo/error/ResourceNotFoundException.java
package com.example.marcel.DevDojo.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
